clarify: old code, new code, and extension-free path via arrowExportStream
Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/1ecd8208-8c7c-4903-b3e2-888fa3734b44

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>